<resources>
    <string name="app_name">GPS Velocimeter</string>
    <string name="buttonStart">Start</string>
    <string name="buttonPause">Pause</string>
    <string name="buttonStop">Stop</string>
    <string name="Velocidad">Speed</string>
    <string name="Distancia">Distance</string>
    <string name="Tiempo">Time</string>
    <string name="AjustesGPS">GPS Settings</string>
    <string name="Ajustes">Settings</string>
    <string name="GPSNoAjustes">GPS location not activated. Activate it.</string>
    <string name="Cancelar">Cancel</string>
    <string name="GPSNoActivo">The App won´t work without location</string>
</resources>